test/error/sema/if-condition-not-bool.dsk
if 1 then
    echo("hello")
end
